@@ -1,3 +1,7 @@
+2010-06-17  David Wetzel <dave@turbocat.de>
+	* GSWAdaptors/Apache2/mod_gsw.c
+	minor cleanups, avoid missing filename message to logs
+	
 2010-06-16  David Wetzel <dave@turbocat.de>
 	* GSWeb/Resources/languages.plist
 	add more languages
